css/about-me.css
.about {
	padding-top: 10px;
	padding-bottom: 10px;
}

.image img {
    width: 100%;
	height: auto;
}

.authorName {
	font-size: 40px;
	text-align: center;
	font-weight: bold;
	font-family: 'Permanent Marker';
	min-height: 90px;
	line-height: 90px;
}

.college {
	text-align: center;
	min-height: 55px;
	font-size: 30px;	
	margin-bottom: 10px;
}

.block {
	min-width: 190px;
}

.description {
	text-align: center;
}
.description a {
	font-size: 30px;
}
.description p {
	font-style: normal;
	font-variant: normal;
	font-weight: normal;
	font-size: 20px;
	font-family: normal;
	resize: vertical;
}

/* Overlay layer on map */
.slide {
  position: relative;
  width: 100%;
}

.mapImg {
	width: 100%;
	margin-left: auto;
    margin-right: auto;
	display: block;
	border-radius: 8px;
	padding-bottom: 10px;
}

.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color:  rgb(48,48,48);
  opacity: 0.8;
  overflow: hidden;
  width: 0;
  height: 100%;
  transition: .5s ease;
}

.slide:hover .overlay {
  width: 100%;
}

.text {
  white-space: nowrap; 
  color: white;
  font-size: 80px;
  position: absolute;
  overflow: hidden;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

.divider {
	margin: 0;
	padding: 0;
	height: 50px;
	clear: both;
	overflow: hidden;
}

